<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/menuLayout"
        style="?menu_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            style="?menutopbar"
            android:layout_width="fill_parent"
            android:layout_height="46.0dip"
            android:clickable="true"
            android:gravity="center_vertical" >

            <LinearLayout
                android:id="@+id/ll_btn_user"
                style="?setting"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/userIcon"
                    style="?menutopbar_usericon"
                    android:layout_width="@dimen/image_avatar_size"
                    android:layout_height="@dimen/image_avatar_size"
                    android:layout_marginLeft="10.0dip"
                    android:contentDescription="@string/description_user_avatar"
                    android:padding="0.8000001dip" />

                <TextView
                    android:id="@+id/userName"
                    style="?menutopbar_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:text="@string/default_user_name" />
            </LinearLayout>

            <ImageView
                android:id="@+id/col"
                style="?side_menu_col"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent" />

            <ImageButton
                android:id="@+id/ib_btn_setting"
                style="?setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:contentDescription="@string/description_setting"
                android:gravity="center_vertical"
                android:paddingLeft="2.0dip"
                android:paddingRight="2.0dip" />
        </LinearLayout>

        <ListView
            android:id="@+id/menulist"
            style="?menulist"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:fadingEdge="none"
            android:footerDividersEnabled="true" />
    </LinearLayout>
</FrameLayout>